@@ -1,6 +1,6 @@
 % File src/library/base/man/format.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2023 R Core Team
+% Copyright 1995-2024 R Core Team
 % Copyright 2003-2016 The R Foundation
 % Distributed under GPL 2 or later
 
@@ -25,7 +25,7 @@ format(x, \dots)
        decimal.mark = getOption("OutDec"),
        zero.print = NULL, drop0trailing = FALSE, \dots)
 
-\method{format}{data.frame}(x, \dots, justify = "none")
+\method{format}{data.frame}(x, \dots, justify = "none", cut.names = TRUE)
 
 \method{format}{factor}(x, \dots)
 
@@ -53,6 +53,9 @@ format(x, \dots)
 
   \item{justify}{should a \emph{character} vector be left-justified (the
     default), right-justified, centred or left alone.  Can be abbreviated.}
+
+  \item{cut.names}{\code{\link{logical}} passed to the \code{list} method
+    of \code{\link{as.data.frame}()}.}
 
   \item{width}{\code{default} method: the \emph{minimum} field width or
     \code{NULL} or \code{0} for no restriction.
